kubernetes/deployment.template.yaml
---
#
# NAMESPACE - Defines a logical grouping of resources
#
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}
---
#
# DEPLOYMENT - Defines the image to use, all env variables, exposed ports and resource limits
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${SERVICE_NAME}
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${SERVICE_NAME}
  template:
    metadata:
      labels:
        app: ${SERVICE_NAME}
    spec:
      containers:
        - image: ${IMAGE_NAME}
          name: ${SERVICE_NAME}
          resources:
            requests:
              memory: "1024Mi"
              cpu: "200m"
            limits:
              memory: "2048Mi"
              cpu: "2500m"
          ports:
            - containerPort: 8080 #TODO Check this is correct.
              name: http
          imagePullPolicy: Always
# TODO Pawel, should the port be written in src/main/resources/application.yaml?
---
#
# SERVICE - exposes containers internally to the cluster - enables service discovery via internal DNS
#
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE_NAME}
  namespace: ${NAMESPACE}
  labels:
    app: ${SERVICE_NAME}
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080 #TODO Check this is correct
  selector:
    app: ${SERVICE_NAME}
---
#
# INGRESS - makes it accessible from outside the cluster
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${SERVICE_NAME}
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: ${SERVICE_FQDN}
      http:
        paths:
          - path: /
            backend:
              serviceName: ${SERVICE_NAME}
              servicePort: 80
---
#
# DEPLOYMENT - Defines the image & port for the postgres DB
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shared-database
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shared-database
  template:
    metadata:
      labels:
        app: shared-database
    spec:
      containers:
        - image: postgres:10.5-alpine
          name: shared-database
          resources:
            requests:
              memory: '256Mi'
              cpu: '200m'
            limits:
              memory: '1024Mi'
              cpu: '1000m'
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d
              name: initdb
              readOnly: true
      volumes:
        - name: initdb
          configMap:
            name: shared-database-initdb
---
#
# SERVICE - Expose the postgres container internally to the cluster
#
apiVersion: v1
kind: Service
metadata:
  name: shared-database
  namespace: ${NAMESPACE}
  labels:
    app: shared-database
spec:
  ports:
    - port: 5432
  selector:
    app: shared-database
  clusterIP: None
